--- a/index.html
+++ b/index.html
@@ -2,21 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bit Clip Mail - On-Chain Messaging</title>
-    <meta name="description" content="View and send messages stored permanently on Bitcoin, Ethereum, and Solana blockchains. Secure, decentralized communication for crypto enthusiasts." />
-    <meta name="author" content="Bit Clip Mail" />
-
-    <meta property="og:title" content="Bit Clip Mail - On-Chain Messaging" />
-    <meta property="og:description" content="Decentralized messaging platform for Bitcoin, Ethereum, and Solana" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>Vite + React + TS</title>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
